--- a/app/coursify-ai/Dockerfile
+++ b/app/coursify-ai/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Python runtime as a base image
-FROM python:3.9
+# Use Python 3.11 instead of 3.9
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -8,6 +8,7 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed packages specified in requirements.txt
+RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Make port 5000 available to the world outside this container
@@ -17,5 +18,5 @@ EXPOSE 5000
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
-# Run app.py when the container launches
-CMD ["flask", "run"]
+# Run with gunicorn for production
+CMD gunicorn app:app --bind 0.0.0.0:${PORT:-5000} --workers 2 --timeout 120
