--- a/app/coursify-ai/Dockerfile
+++ b/app/coursify-ai/Dockerfile
@@ -19,8 +19,12 @@ ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 ENV PYTHONUNBUFFERED=1
 
-# Test if app can be imported - this will show the actual error
-RUN python -c "import sys; sys.path.insert(0, '.'); import app; print('✓ App imported successfully'); print('✓ Flask app:', app.app)" || (echo "✗ IMPORT FAILED - See error above" && exit 1)
+# Diagnostic: Show file structure and what's in the app module
+RUN echo "=== Files in /app ===" && ls -la /app && \
+    echo "=== Checking for app.py ===" && test -f /app/app.py && echo "✓ app.py exists" || echo "✗ app.py NOT FOUND" && \
+    echo "=== Checking for app/ directory ===" && test -d /app/app && echo "⚠ app/ directory exists (CONFLICT!)" || echo "✓ No app/ directory" && \
+    echo "=== What Python sees when importing 'app' ===" && \
+    python -c "import sys; sys.path.insert(0, '.'); import app; print('Module location:', app.__file__); print('Module type:', type(app)); print('Has app attr?', hasattr(app, 'app')); import inspect; print('First 50 lines of app.py:'); print(inspect.getsource(app)[:2000])" || echo "Import failed"
 
 # Run with gunicorn for production
 CMD gunicorn app:app --bind 0.0.0.0:${PORT:-5000} --workers 2 --timeout 120 --log-level debug --access-logfile - --error-logfile -
