--- a/src/coursify-ai/Dockerfile
+++ b/src/coursify-ai/Dockerfile
@@ -15,5 +15,5 @@ ENV FLASK_APP=main.py
 ENV FLASK_RUN_HOST=0.0.0.0
 ENV PYTHONUNBUFFERED=1
 
-# Now gunicorn looks for 'application' in 'main.py' - no naming conflict!
-CMD gunicorn main:main --bind 0.0.0.0:${PORT:-5000} --workers 2 --timeout 120
+# Increased timeout and graceful timeout for Railway deployment
+CMD gunicorn main:main --bind 0.0.0.0:${PORT:-5000} --workers 2 --timeout 180 --graceful-timeout 180 --worker-class sync
