--- a/src/coursify-ai/Dockerfile
+++ b/src/coursify-ai/Dockerfile
@@ -2,18 +2,27 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-# Copy from build context root (Railway uses repo root as context)
+# Copy requirements first for better caching
 COPY requirements.txt /code/
-COPY src/coursify-ai/ /code/
 
+# Install dependencies
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy all Python modules
+COPY *.py /code/
+
+# Copy templates directory
+COPY templates/ /code/templates/
+
+# Create necessary directories
+RUN mkdir -p /code/pdfs /code/presentations /code/quiz_files
+
 EXPOSE 5000
 
-ENV FLASK_APP=main.py
-ENV FLASK_RUN_HOST=0.0.0.0
+# Environment variables
+ENV FLASK_APP=wsgi.py
 ENV PYTHONUNBUFFERED=1
 
-# Increased timeout and graceful timeout for Railway deployment
-CMD gunicorn main:main --bind 0.0.0.0:${PORT:-5000} --workers 2 --timeout 180 --graceful-timeout 180 --worker-class sync
+# Run with gunicorn using wsgi.py
+CMD gunicorn wsgi:application --bind 0.0.0.0:${PORT:-5000} --workers 1 --timeout 300 --graceful-timeout 300 --preload
