--- a/src/coursify-ai/Dockerfile
+++ b/src/coursify-ai/Dockerfile
@@ -2,27 +2,23 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-# Copy requirements first for better caching
+# Copy requirements from root
 COPY requirements.txt /code/
+
+# Copy all files from src/coursify-ai/
+COPY src/coursify-ai/ /code/
 
 # Install dependencies
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all Python modules
-COPY *.py /code/
-
-# Copy templates directory
-COPY templates/ /code/templates/
-
-# Create necessary directories
+# Create necessary directories for generated content
 RUN mkdir -p /code/pdfs /code/presentations /code/quiz_files
 
 EXPOSE 5000
 
-# Environment variables
 ENV FLASK_APP=wsgi.py
 ENV PYTHONUNBUFFERED=1
 
-# Run with gunicorn using wsgi.py
+# Run with gunicorn
 CMD gunicorn wsgi:application --bind 0.0.0.0:${PORT:-5000} --workers 1 --timeout 300 --graceful-timeout 300 --preload
