--- a/src/coursify-ai/Dockerfile
+++ b/src/coursify-ai/Dockerfile
@@ -12,13 +12,12 @@ COPY src/coursify-ai/ /code/
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create necessary directories for generated content
+# Create necessary directories
 RUN mkdir -p /code/pdfs /code/presentations /code/quiz_files
 
 EXPOSE 5000
 
-ENV FLASK_APP=wsgi.py
 ENV PYTHONUNBUFFERED=1
 
-# Run with gunicorn
-CMD gunicorn wsgi:application --bind 0.0.0.0:${PORT:-5000} --workers 1 --timeout 300 --graceful-timeout 300 --preload
+# Run main.py directly - NO wsgi.py needed!
+CMD gunicorn main:main --bind 0.0.0.0:${PORT:-5000} --workers 1 --timeout 300 --graceful-timeout 300 --preload
